--- a/eeg_gui.ipynb
+++ b/eeg_gui.ipynb
@@ -46,7 +46,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def elliptic_bandpass(order, rp, rs, lowcut, highcut):\n",
+    "    fs=256\n",
+    "    nyq = 0.5 * fs\n",
+    "    low = lowcut / nyq\n",
+    "    high = highcut / nyq\n",
+    "    b, a = signal.ellip(order, rp, rs, [low, high], btype='bandpass', analog=False, output='ba')\n",
+    "    return b, a\n",
+    "\n",
+    "\n",
+    "\n",
+    "def power(x):\n",
+    "    x=1.0*(x)\n",
+    "    return sum(x**2)/len(x)\n",
+    "\n",
+    "def CAR(samples):\n",
+    "    s=[]\n",
+    "    for i in range(0, len(samples)):\n",
+    "        s.append((sum(samples))/64.0)\n",
+    "    \n",
+    "    sample=samples-s\n",
+    "    return sample, s\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "def baseline_als(y, lam, p, niter=10):\n",
+    "    L = len(y)\n",
+    "    D = sparse.diags([1,-2,1],[0,-1,-2], shape=(L,L-2))\n",
+    "    #D = sparse.csc_matrix(np.diff(np.eye(L), 2))\n",
+    "    w = np.ones(L)\n",
+    "    for i in range(niter):\n",
+    "        W = sparse.spdiags(w, 0, L, L)\n",
+    "        Z = W + lam * D.dot(D.transpose())\n",
+    "        z = spsolve(Z, w*y)\n",
+    "        w = p * (y > z) + (1-p) * (y < z)\n",
+    "    return z\n",
+    "\n",
+    "\n",
+    "spr_channels=[0,2,7,9,11,13,15,62,25,27,29,31,33,63,43,45,47,49,51,57,59]\n",
+    "spr_channels=np.array(spr_channels)\n",
+    "spr_channel_names=['fp1','fp2','f7','f3','fz','f4','f8','A1','T3','C3','Cz','C4','T4','A2','T5','P3','Pz','P4','T6'\n",
+    "                  ,'O1','O2']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,14 +232,136 @@
     "        self.e5.insert(10, self.dirs[90])\n",
     "        controller.dirs=self.dirs\n",
     "        controller.filepath=self.filepath\n",
+    "        \n",
+    "       \n",
+    "    \n",
+    "        \n",
+    "    def elliptic_bandpass(self, order, rp, rs, lowcut, highcut):\n",
+    "        fs=256\n",
+    "        nyq = 0.5 * fs\n",
+    "        low = lowcut / nyq\n",
+    "        high = highcut / nyq\n",
+    "        b, a = signal.ellip(order, rp, rs, [low, high], btype='bandpass', analog=False, output='ba')\n",
+    "        return b, a\n",
+    "\n",
+    "\n",
+    "\n",
+    "    def power(self, x):\n",
+    "        x=1.0*(x)\n",
+    "        return sum(x**2)/len(x)\n",
+    "        \n",
+    "    def subpower(self, efile, spr_channel):\n",
+    "        spr_channels=[0,2,7,9,11,13,15,62,25,27,29,31,33,63,43,45,47,49,51,57,59]\n",
+    "        spr_channels=np.array(spr_channels)\n",
+    "        powerr=[]\n",
+    "        for i in range (0, len(efile[0]), 2):\n",
+    "            activity=str(efile[0][i][72:])\n",
+    "            eeg=[]\n",
+    "            for j in range(0, len(efile)):\n",
+    "                eeg.append(h5py.File(efile[j][i],mode='r'))\n",
+    "                eeg.append(h5py.File(efile[j][i+1],mode='r'))\n",
+    "            samples=[]\n",
+    "            sampletime1=[]\n",
+    "            \n",
+    "            for j in range(0, len(eeg)):\n",
+    "                sam=[]\n",
+    "                sa=np.array(eeg[j][\"RawData\"]['Samples'])\n",
+    "                sa=sa.T\n",
+    "                #sa,_=CAR(sa)\n",
+    "\n",
+    "                #for i in range(0, len(sa)):\n",
+    "                 #   z=baseline_als(sa[i], 10**4, 0.1, 5)\n",
+    "                  #  sa[i]=sa[i]-z\n",
+    "\n",
+    "                samples.append(sa)\n",
+    "                sampletime = np.array(eeg[j]['AsynchronData'][\"Time\"])\n",
+    "                sam.append(int(sampletime[0]))\n",
+    "                sam.append(int(sampletime[1]))\n",
+    "                sampletime1.append(sam)\n",
+    "\n",
+    "            freq=[[0.5, 4], [4, 8], [8, 13], [13, 30], [30, 100]]\n",
+    "            fs=256\n",
+    "            order=4\n",
+    "            rp=0.5\n",
+    "            rs=30\n",
+    "            powe=[]\n",
+    "            for j in range(0, len(samples)):\n",
+    "\n",
+    "                alpha=[]\n",
+    "                beta=[]\n",
+    "                gamma=[]\n",
+    "                delta=[]\n",
+    "                theta=[]\n",
+    "                p=[]\n",
+    "                k = spr_channel\n",
+    "                b, a = self.elliptic_bandpass(order, rp, rs, freq[0][0], freq[0][1])\n",
+    "                delta.append(signal.filtfilt(b, a, samples[j][k], padlen=0))\n",
+    "                b, a = self.elliptic_bandpass(order, rp, rs, freq[1][0], freq[1][1])\n",
+    "                theta.append(signal.filtfilt(b, a, samples[j][k], padlen=0))\n",
+    "                b, a = self.elliptic_bandpass(order, rp, rs, freq[2][0], freq[2][1])\n",
+    "                alpha.append(signal.filtfilt(b, a, samples[j][k], padlen=0))\n",
+    "                b, a = self.elliptic_bandpass(order, rp, rs, freq[3][0], freq[3][1])\n",
+    "                beta.append(signal.filtfilt(b, a, samples[j][k], padlen=0))\n",
+    "                b, a = self.elliptic_bandpass(order, rp, rs, freq[4][0], freq[4][1])\n",
+    "                gamma.append(signal.filtfilt(b, a, samples[j][k], padlen=0))\n",
+    "\n",
+    "                k=0\n",
+    "                alpha[k]=alpha[k][sampletime1[j][0]:sampletime1[j][1]]\n",
+    "                beta[k]=beta[k][sampletime1[j][0]:sampletime1[j][1]]\n",
+    "                gamma[k]=gamma[k][sampletime1[j][0]:sampletime1[j][1]]\n",
+    "                delta[k]=delta[k][sampletime1[j][0]:sampletime1[j][1]]\n",
+    "                theta[k]=theta[k][sampletime1[j][0]:sampletime1[j][1]]\n",
+    "\n",
+    "\n",
+    "\n",
+    "                p.append(self.power(delta[k]))\n",
+    "                p.append(self.power(theta[k]))\n",
+    "                p.append(self.power(alpha[k]))\n",
+    "                p.append(self.power(beta[k]))\n",
+    "                p.append(self.power(gamma[k]))\n",
+    "\n",
+    "                powe.append(p)\n",
+    "            powerr.append(powe)\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        return powerr\n",
     "\n",
     "    def compute(self, controller):\n",
     "        ##code to comptue all_powers\n",
-    "        #folder=(self.filepath+'/qeeg')\n",
-    "        #if os.path.exists(folder):\n",
-    "         #   shutil.rmtree(folder)\n",
-    "        #os.mkdir(folder)\n",
-    "        #np.save(folder+'/directory_path', self.dirs)\n",
+    "        efile=[]\n",
+    "        for i in sorted(self.dirs):\n",
+    "            if self.dirs[i]!= 'N.A.':\n",
+    "                arr=list(glob.glob(self.dirs[i]+'/*hdf5'))\n",
+    "                arr.sort()\n",
+    "            \n",
+    "                efile.append(arr[len(arr)-14:])\n",
+    "        \n",
+    "        spr_channels=[0,2,7,9,11,13,15,62,25,27,29,31,33,63,43,45,47,49,51,57,59]\n",
+    "        spr_channels=np.array(spr_channels)\n",
+    "        all_power=[]\n",
+    "        progressbar=ttk.Progressbar(self, orient='horizontal', length=300, mode='determinate')\n",
+    "        progressbar.grid(row=10, column=30, sticky='WE')\n",
+    "        progressbar['value']=0\n",
+    "        progressbar['maximum']=len(spr_channels)\n",
+    "        divisions=len(spr_channels)\n",
+    "        for i in range(0, len(spr_channels)):\n",
+    "            #print 1\n",
+    "            powerr=self.subpower(efile, i)\n",
+    "            all_power.append(powerr)\n",
+    "            progressbar['value']=i\n",
+    "            progressbar.update()\n",
+    "\n",
+    "\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        folder=(self.filepath+'/qeeg')\n",
+    "        if os.path.exists(folder):\n",
+    "            shutil.rmtree(folder)\n",
+    "        os.mkdir(folder)\n",
+    "        np.save(folder+'/all_powers', all_power)\n",
     "        controller.show_frame(QeegPage)\n",
     "\n",
     "class QeegPage(tk.Frame):\n",
@@ -493,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +685,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "list(glob.glob(self.dirs[i]+'/*hdf5'))"
+   ]
   }
  ],
  "metadata": {
