--- a/eeg_gui.ipynb
+++ b/eeg_gui.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,6 +370,50 @@
     "        \n",
     "        \n",
     "        return powerr\n",
+    "    \n",
+    "    def compute_bsi_t(self, bsir, t, T):\n",
+    "        bsi_channels=[[13, 31], [9, 27], [31, 49], [27, 45], [49, 59], [45, 57], [13, 33], [9, 25]]\n",
+    "        ni=np.zeros(T)\n",
+    "        for i in range(0, len(bsi_channels)):\n",
+    "\n",
+    "            rj=np.abs(np.fft.fft(bsir[bsi_channels[i][0]][t-T:t]))\n",
+    "            lj=np.abs(np.fft.fft(bsir[bsi_channels[i][1]][t-T:t]))\n",
+    "            ni=ni+((rj-lj)/(rj+lj))/len(bsi_channels)\n",
+    "\n",
+    "\n",
+    "        ni=np.mean(np.abs(ni))\n",
+    "        #print (ni.real)\n",
+    "        return ni\n",
+    "    \n",
+    "    def compute_bsi(self, controller, efile):\n",
+    "        bsi_channels=[[13, 31], [9, 27], [31, 49], [27, 45], [49, 59], [45, 57], [13, 33], [9, 25]]\n",
+    "        bsi_channel_names=[['F4', 'C4'], ['F3', 'C3'], ['C4', 'P4'], ['C3', 'P3'], ['P4', 'O2'], ['P3', 'O1'], ['F4', 'T4'], \n",
+    "                   ['F3', 'T3']]\n",
+    "        bsifile=[]\n",
+    "        for i in range(0, len(efile)):\n",
+    "            eeg=h5py.File(efile[i], mode='r')\n",
+    "            samples=np.array(eeg['RawData']['Samples'])\n",
+    "            samples=samples.T\n",
+    "            sampletime = np.array(eeg['AsynchronData'][\"Time\"])\n",
+    "\n",
+    "            bsir=[]\n",
+    "            fs=256\n",
+    "            order=4\n",
+    "            rp=0.5\n",
+    "            rs=30\n",
+    "            for i in range (0, len(samples)):\n",
+    "                b, a= self.elliptic_bandpass(order, rp, rs, 1, 25)\n",
+    "                bsir.append(signal.filtfilt(b, a, samples[i], padlen=0))\n",
+    "                \n",
+    "            \n",
+    "            T=256*4  #window time\n",
+    "            bsi=[]\n",
+    "            for i in range(sampletime[0]+T, sampletime[1], 512):\n",
+    "                bsi.append(self.compute_bsi_t(bsir, i, T))\n",
+    "                \n",
+    "            bsifile.append(bsi)\n",
+    "            \n",
+    "        return bsifile\n",
     "\n",
     "    def compute(self, controller):\n",
     "        ##code to comptue all_powers\n",
@@ -399,8 +443,11 @@
     "            progressbar['value']=i\n",
     "            progressbar.update()\n",
     "\n",
-    "\n",
-    "        \n",
+    "        bsifile=[]\n",
+    "        for i in range(0, len(efile)):\n",
+    "            bsifile.append(self.compute_bsi(controller, efile[i]))\n",
+    "            progressbar['value']=i\n",
+    "            progressbar.update()\n",
     "        \n",
     "        \n",
     "        \n",
@@ -409,6 +456,7 @@
     "            shutil.rmtree(folder)\n",
     "        os.mkdir(folder)\n",
     "        np.save(folder+'/all_powers', all_power)\n",
+    "        np.save(folder+'/bsi', bsifile)\n",
     "        controller.show_frame(QeegPage)\n",
     "\n",
     "class QeegPage(tk.Frame):\n",
@@ -516,7 +564,8 @@
     "            if controller.dirs[i]!='N.A.':\n",
     "                keys.append(i)\n",
     "                print_keys.append('Day'+str(i))\n",
-    "                \n",
+    "        bsifile= np.load(controller.filepath+'/qeeg/bsi.npy')\n",
+    "        \n",
     "        mean_alpha_a_right_pre=np.zeros(5)\n",
     "        mean_alpha_a_right_post=np.zeros(5)\n",
     "        mean_alpha_a_left_post=np.zeros(5)\n",
@@ -536,6 +585,9 @@
     "        \n",
     "        (marpre,marpost,malpost,malpre,mbrpre,mbrpost,mblpost,mblpre,\\\n",
     "        mdrpre,mdrpost,mdlpost,mdlpre,mtrpre,mtrpost,mtlpost,mtlpre)=self.compute_ratios(controller, ab)\n",
+    "        activity='a'\n",
+    "        if ab==1:\n",
+    "            activity='b'\n",
     "        j=0\n",
     "        for i in range(0, len(keys)):\n",
     "            if keys[i]==1:\n",
@@ -564,6 +616,15 @@
     "            mean_theta_a_right_post[j]=mtrpost[i]\n",
     "            mean_theta_a_left_post[j]=mtlpost[i]\n",
     "            mean_theta_a_left_pre[j]=mtlpre[i]\n",
+    "            \n",
+    "            ##bsi\n",
+    "            plt.rcParams[\"figure.figsize\"] = [25,16]\n",
+    "            bsi= bsifile[i]\n",
+    "            plt.plot(np.arange(len(bsi[2*ab]))*512.0/256,np.array( bsi[2*ab]),'-r', label='pre exercise')#2*1=2(b),2*0=0(a)\n",
+    "            plt.plot(np.arange(len(bsi[2*ab+1]))*512.0/256,np.array( bsi[2*ab+1]),'-b', label='post exercise')\n",
+    "            plt.legend(loc='upper right')#2*1+1=3(bb),2*0+1=0(aa)\n",
+    "            plt.savefig(controller.filepath+'/qeeg/bsi_DAY_'+str(keys[i])+activity+'_.png')\n",
+    "            plt.close()\n",
     "            \n",
     "        for i in range(0, 5):\n",
     "            dayframe=self.dayframes[i]\n",
@@ -603,9 +664,7 @@
     "            inFileLbl = tk.Label(dayframe, text='%.1f' % mean_beta_a_left_post[i],font=number_font)\n",
     "            inFileLbl.grid(row=14, column=5, sticky='WE', padx=0, pady=2)\n",
     "        \n",
-    "        activity='a'\n",
-    "        if ab==1:\n",
-    "            activity='b'\n",
+    "        \n",
     "        plt.rcParams[\"figure.figsize\"] = [25,16]\n",
     "        plt.plot(print_keys, np.array(malpost)*np.array(marpre)/(np.array(malpre)*np.array(marpost)))\n",
     "        plt.savefig(controller.filepath+'/qeeg/Alpha_'+activity+'_left%right_post%pre.png')\n",
@@ -640,7 +699,25 @@
     "        buttonda= ttk.Button(self, text='Delta/Alpha\\nleft/right\\nRatio',\n",
     "                           command=lambda: self.show_graph(controller, activity, 'DeltaAlpha'))\n",
     "        buttonda.grid(row=70, column=21,sticky='NS', padx=2, pady=5)\n",
-    "        \n",
+    "        cols= [15, 16, 18, 19, 21]\n",
+    "\n",
+    "        button= ttk.Button(self, text='BSI_DAY_1',\n",
+    "                       command=lambda: self.show_graph(controller, activity, 'DAY_1'))\n",
+    "        button.grid(row=71, column=15,sticky='NS', padx=2, pady=5)\n",
+    "        button= ttk.Button(self, text='BSI_DAY_2',\n",
+    "                       command=lambda: self.show_graph(controller, activity, 'DAY_2'))\n",
+    "        button.grid(row=71, column=16,sticky='NS', padx=2, pady=5)\n",
+    "        button= ttk.Button(self, text='BSI_DAY_7',\n",
+    "                       command=lambda: self.show_graph(controller, activity, 'DAY_7'))\n",
+    "        button.grid(row=71, column=18,sticky='NS', padx=2, pady=5)\n",
+    "        button= ttk.Button(self, text='BSI_DAY_30',\n",
+    "                       command=lambda: self.show_graph(controller, activity, 'DAY_30'))\n",
+    "        button.grid(row=71, column=19,sticky='NS', padx=2, pady=5)\n",
+    "        button= ttk.Button(self, text='BSI_DAY_90',\n",
+    "                       command=lambda: self.show_graph(controller, activity, 'DAY_90'))\n",
+    "        button.grid(row=71, column=21,sticky='NS', padx=2, pady=5)\n",
+    "            \n",
+    "            \n",
     "    def show_graph(self, controller, activity, band):\n",
     "        if band=='delta':\n",
     "            img= Image.open(controller.filepath+'/qeeg/Delta_'+activity+'_left%right_post%pre.png')\n",
@@ -650,8 +727,21 @@
     "            img= Image.open(controller.filepath+'/qeeg/Alpha_'+activity+'_left%right_post%pre.png')\n",
     "        elif band=='beta':\n",
     "            img= Image.open(controller.filepath+'/qeeg/Beta_'+activity+'_left%right_post%pre.png')\n",
-    "        else:\n",
+    "        elif band=='DeltaAlpha':\n",
     "            img= Image.open(controller.filepath+'/qeeg/Delta%Alpha_'+activity+'_left%right_post%pre.png')\n",
+    "            \n",
+    "        elif band== 'DAY_1':\n",
+    "            img= Image.open(controller.filepath+'/qeeg/bsi_DAY_1'+activity+'_.png')\n",
+    "            \n",
+    "        elif band== 'DAY_2':\n",
+    "            img= Image.open(controller.filepath+'/qeeg/bsi_DAY_2'+activity+'_.png')\n",
+    "            \n",
+    "        elif band== 'DAY_7':\n",
+    "            img= Image.open(controller.filepath+'/qeeg/bsi_DAY_7'+activity+'_.png')\n",
+    "        elif band== 'DAY_30':\n",
+    "            img= Image.open(controller.filepath+'/qeeg/bsi_DAY_30'+activity+'_.png')\n",
+    "        else:\n",
+    "            img= Image.open(controller.filepath+'/qeeg/bsi_DAY_90'+activity+'_.png')\n",
     "        img.show()\n",
     "        \n",
     "        \n",
@@ -734,18 +824,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{1: '/home/apk/patient_id6/id6Day1-20190503T170539Z-001', 2: 'N.A.', 90: '/home/apk/patient_id6/id6Day90-20190503T213214Z-001', 30: '/home/apk/patient_id6/id6Day30-20190503T212316Z-001', 7: '/home/apk/patient_id6/id6Day7-20190503T212715Z-001'}\n",
-      "{1: '/home/apk/patient_id6/id6Day1-20190503T170539Z-001', 2: '/home/apk/id6Day2-20190503T211715Z-001', 90: '/home/apk/patient_id6/id6Day90-20190503T213214Z-001', 30: '/home/apk/patient_id6/id6Day30-20190503T212316Z-001', 7: '/home/apk/patient_id6/id6Day7-20190503T212715Z-001'}\n",
-      "{1: 'N.A.', 2: '/home/apk/id6Day2-20190503T211715Z-001', 90: '/home/apk/eeg_MRCP_day90.ipynb', 30: '/home/apk/eeg_MRCP_day30.ipynb', 7: '/home/apk/eeg_MRCP_day7.ipynb'}\n",
-      "{1: '/home/apk/patient_id6/id6Day1-20190503T170539Z-001', 2: 'N.A.', 90: '/home/apk/patient_id6/id6Day90-20190503T213214Z-001', 30: '/home/apk/patient_id6/id6Day30-20190503T212316Z-001', 7: '/home/apk/patient_id6/id6Day7-20190503T212715Z-001'}\n",
-      "{1: '/home/apk/patient_id6/id6Day1-20190503T170539Z-001', 2: '/home/apk/id6Day2-20190503T211715Z-001/id6Day2', 90: '/home/apk/patient_id6/id6Day90-20190503T213214Z-001', 30: '/home/apk/patient_id6/id6Day30-20190503T212316Z-001', 7: '/home/apk/patient_id6/id6Day7-20190503T212715Z-001'}\n"
+      "{1: '/home/apk/patient_id6/id6Day1-20190503T170539Z-001', 2: '/home/apk/patient_id6/id6Day2-20190503T211715Z-001', 90: '/home/apk/patient_id6/id6Day90-20190503T213214Z-001', 30: '/home/apk/patient_id6/id6Day30-20190503T212316Z-001', 7: '/home/apk/patient_id6/id6Day7-20190503T212715Z-001'}\n",
+      "{1: '/home/apk/patient_id6/id6Day1-20190503T170539Z-001', 2: '/home/apk/patient_id6/id6Day2-20190503T211715Z-001', 90: '/home/apk/patient_id6/id6Day90-20190503T213214Z-001', 30: '/home/apk/patient_id6/id6Day30-20190503T212316Z-001', 7: '/home/apk/patient_id6/id6Day7-20190503T212715Z-001'}\n",
+      "{1: 'N.A.', 2: 'N.A.', 90: 'N.A.', 30: 'N.A.', 7: 'N.A.'}\n",
+      "{1: 'N.A.', 2: 'N.A.', 90: 'N.A.', 30: 'N.A.', 7: '/home/apk/patient_id6/id6Day7-20190503T212715Z-001'}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in Tkinter callback\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/apk/anaconda2/lib/python2.7/lib-tk/Tkinter.py\", line 1541, in __call__\n",
+      "    return self.func(*args)\n",
+      "  File \"<ipython-input-44-46a9937f9bc5>\", line 608, in <lambda>\n",
+      "    command=lambda: self.show_graph(controller, activity, 'DAY_7'))\n",
+      "  File \"<ipython-input-44-46a9937f9bc5>\", line 637, in show_graph\n",
+      "    img= Image.open(controller.filepath+'/qeeg/bsi_DAY_7'+activity+'_.png')\n",
+      "  File \"/home/apk/anaconda2/lib/python2.7/site-packages/PIL/Image.py\", line 2548, in open\n",
+      "    fp = builtins.open(filename, \"rb\")\n",
+      "IOError: [Errno 2] No such file or directory: '/home/apk/patient_id6/id6Day7-20190503T212715Z-001/qeeg/bsi_DAY_7a_.png'\n",
+      "Exception in Tkinter callback\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/apk/anaconda2/lib/python2.7/lib-tk/Tkinter.py\", line 1541, in __call__\n",
+      "    return self.func(*args)\n",
+      "  File \"<ipython-input-44-46a9937f9bc5>\", line 611, in <lambda>\n",
+      "    command=lambda: self.show_graph(controller, activity, 'DAY_30'))\n",
+      "  File \"<ipython-input-44-46a9937f9bc5>\", line 639, in show_graph\n",
+      "    img= Image.open(controller.filepath+'/qeeg/bsi_DAY_30'+activity+'_.png')\n",
+      "  File \"/home/apk/anaconda2/lib/python2.7/site-packages/PIL/Image.py\", line 2548, in open\n",
+      "    fp = builtins.open(filename, \"rb\")\n",
+      "IOError: [Errno 2] No such file or directory: '/home/apk/patient_id6/id6Day7-20190503T212715Z-001/qeeg/bsi_DAY_30a_.png'\n"
      ]
     }
    ],
@@ -756,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -773,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
