--- a/eeg_gui.ipynb
+++ b/eeg_gui.ipynb
@@ -4,16 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/apk/anaconda2/lib/python2.7/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import Tkinter as tk\n",
     "import ttk\n",
@@ -34,19 +25,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "LARGE_FONT=('Verdana', 20)\n",
+    "LARGE_FONT=('Verdana', 16)\n",
     "color='blue'\n",
-    "small_font=('Verdana', 12)\n",
-    "number_font=('Verdana', 8)"
+    "small_font=('Verdana', 10)\n",
+    "number_font=('Verdana', 6)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +204,7 @@
     "        \n",
     "        if br==0:\n",
     "            self.filepath=tkFileDialog.askdirectory()\n",
-    "            arr= glob.glob(self.filepath+'/*')\n",
+    "            arr= glob.glob(self.filepath+'/*/')\n",
     "            arr.sort()\n",
     "            self.dirs={1:'N.A.', 2:'N.A.', 7:'N.A.', 30:'N.A.', 90:'N.A.'}\n",
     "            if arr!=None:\n",
@@ -545,6 +536,10 @@
     "            inFileLbl.grid(row=r1+3, column=0, sticky='WE', padx=0, pady=2)\n",
     "            inFileLbl = tk.Label(dayframe, text='Delta/Alpha\\nRatio')\n",
     "            inFileLbl.grid(row=r1+6, column=0, sticky='WE', padx=0, pady=2)\n",
+    "            inFileLbl = tk.Label(dayframe, text='Pre')\n",
+    "            inFileLbl.grid(row=r1+8, column=2, sticky='WE', padx=0, pady=2)\n",
+    "            inFileLbl = tk.Label(dayframe, text='Post')\n",
+    "            inFileLbl.grid(row=r1+8, column=4, sticky='WE', padx=0, pady=2)\n",
     "            inFileLbl = tk.Label(dayframe, text='Brain\\nSymmetry\\nIndex')\n",
     "            inFileLbl.grid(row=r1+10, column=0, sticky='WE', padx=0, pady=2)\n",
     "            \n",
@@ -563,7 +558,7 @@
     "        for i in key:\n",
     "            if controller.dirs[i]!='N.A.':\n",
     "                keys.append(i)\n",
-    "                print_keys.append('Day'+str(i))\n",
+    "                print_keys.append('Day '+str(i))\n",
     "        bsifile= np.load(controller.filepath+'/qeeg/bsi.npy')\n",
     "        \n",
     "        mean_alpha_a_right_pre=np.zeros(5)\n",
@@ -589,6 +584,7 @@
     "        if ab==1:\n",
     "            activity='b'\n",
     "        j=0\n",
+    "        avg_bsi=np.zeros(10)\n",
     "        for i in range(0, len(keys)):\n",
     "            if keys[i]==1:\n",
     "                j=0\n",
@@ -619,9 +615,15 @@
     "            \n",
     "            ##bsi\n",
     "            plt.rcParams[\"figure.figsize\"] = [25,16]\n",
+    "            plt.rcParams.update({'font.size': 12})\n",
     "            bsi= bsifile[i]\n",
+    "            avg_bsi[2*j]= np.average(np.array( bsi[2*ab]))\n",
+    "            avg_bsi[2*j+1]= np.average(np.array( bsi[2*ab+1]))\n",
     "            plt.plot(np.arange(len(bsi[2*ab]))*512.0/256,np.array( bsi[2*ab]),'-r', label='pre exercise')#2*1=2(b),2*0=0(a)\n",
     "            plt.plot(np.arange(len(bsi[2*ab+1]))*512.0/256,np.array( bsi[2*ab+1]),'-b', label='post exercise')\n",
+    "            plt.xlabel('Time')\n",
+    "            plt.ylabel('BSI')\n",
+    "            plt.title('Brain Symmetry Index')\n",
     "            plt.legend(loc='upper right')#2*1+1=3(bb),2*0+1=0(aa)\n",
     "            plt.savefig(controller.filepath+'/qeeg/bsi_DAY_'+str(keys[i])+activity+'_.png')\n",
     "            plt.close()\n",
@@ -636,6 +638,10 @@
     "            inFileLbl.grid(row=10, column=2, sticky='WE', padx=0, pady=2)\n",
     "            inFileLbl = tk.Label(dayframe, text='%.1f' % mean_beta_a_right_pre[i],font=number_font)\n",
     "            inFileLbl.grid(row=14, column=2, sticky='WE', padx=0, pady=2)\n",
+    "            inFileLbl = tk.Label(dayframe, text='%.2f' % avg_bsi[2*i] ,font=number_font)\n",
+    "            inFileLbl.grid(row=50, column=2, sticky='WE', padx=0, pady=2)\n",
+    "            inFileLbl = tk.Label(dayframe, text='%.2f' % avg_bsi[2*i+1] ,font=number_font)\n",
+    "            inFileLbl.grid(row=50, column=4, sticky='WE', padx=0, pady=2)\n",
     "            \n",
     "            inFileLbl = tk.Label(dayframe, text='%.1f' % mean_delta_a_right_post[i], font=number_font)\n",
     "            inFileLbl.grid(row=3, column=3, sticky='WE', padx=0, pady=2)\n",
@@ -664,23 +670,48 @@
     "            inFileLbl = tk.Label(dayframe, text='%.1f' % mean_beta_a_left_post[i],font=number_font)\n",
     "            inFileLbl.grid(row=14, column=5, sticky='WE', padx=0, pady=2)\n",
     "        \n",
-    "        \n",
+    "        keysm=[1, 2, 3, 4, 5]\n",
     "        plt.rcParams[\"figure.figsize\"] = [25,16]\n",
-    "        plt.plot(print_keys, np.array(malpost)*np.array(marpre)/(np.array(malpre)*np.array(marpost)))\n",
+    "        plt.rcParams.update({'font.size': 20})\n",
+    "        plt.xticks(keysm, print_keys)\n",
+    "        #plt.bar(keysm, np.array(malpost)*np.array(marpre)/(np.array(malpre)*np.array(marpost)))\n",
+    "        plt.plot(keysm, np.array(malpost)*np.array(marpre)/(np.array(malpre)*np.array(marpost)))\n",
+    "        plt.ylabel('Alpha Ratio post vs pre left vs right')\n",
+    "        plt.xlabel('Day')\n",
+    "        plt.title('Alpha Ratio')\n",
     "        plt.savefig(controller.filepath+'/qeeg/Alpha_'+activity+'_left%right_post%pre.png')\n",
     "        plt.close()\n",
-    "        plt.plot(print_keys, np.array(mblpost)*np.array(mbrpre)/(np.array(mblpre)*np.array(mbrpost)))\n",
+    "        plt.xticks(keysm, print_keys)\n",
+    "        #plt.bar(keysm, np.array(mblpost)*np.array(mbrpre)/(np.array(mblpre)*np.array(mbrpost)))\n",
+    "        plt.plot(keysm, np.array(mblpost)*np.array(mbrpre)/(np.array(mblpre)*np.array(mbrpost)))\n",
+    "        plt.ylabel('Beta Ratio post vs pre left vs right')\n",
+    "        plt.xlabel('Day')\n",
+    "        plt.title('Beta Ratio')\n",
     "        plt.savefig(controller.filepath+'/qeeg/Beta_'+activity+'_left%right_post%pre.png')\n",
     "        plt.close()\n",
-    "        plt.plot(print_keys, np.array(mdlpost)*np.array(mdrpre)/(np.array(mdlpre)*np.array(mdrpost)))\n",
+    "        plt.xticks(keysm, print_keys)\n",
+    "        #plt.bar(keysm, np.array(mdlpost)*np.array(mdrpre)/(np.array(mdlpre)*np.array(mdrpost)))\n",
+    "        plt.plot(keysm, np.array(mdlpost)*np.array(mdrpre)/(np.array(mdlpre)*np.array(mdrpost)))\n",
+    "        plt.ylabel('Delta Ratio post vs pre left vs right')\n",
+    "        plt.xlabel('Day')\n",
+    "        plt.title('Delta Ratio')\n",
     "        plt.savefig(controller.filepath+'/qeeg/Delta_'+activity+'_left%right_post%pre.png')\n",
     "        plt.close()\n",
-    "        plt.plot(print_keys, np.array(mtlpost)*np.array(mtrpre)/(np.array(mtlpre)*np.array(mtrpost)))\n",
+    "        plt.xticks(keysm, print_keys)\n",
+    "        #plt.bar(keysm, np.array(mtlpost)*np.array(mtrpre)/(np.array(mtlpre)*np.array(mtrpost)))\n",
+    "        plt.plot(keysm, np.array(mtlpost)*np.array(mtrpre)/(np.array(mtlpre)*np.array(mtrpost)))\n",
     "        plt.savefig(controller.filepath+'/qeeg/Theta_'+activity+'_left%right_post%pre.png')\n",
+    "        plt.ylabel('Theta Ratio post vs pre left vs right')\n",
+    "        plt.xlabel('Day')\n",
+    "        plt.title('Theta Ratio')\n",
     "        plt.close()\n",
-    "        plt.plot(print_keys, np.array(mdlpost)*np.array(marpost)/(np.array(mdrpost)*np.array(malpost)),'-b', label='post exercise')\n",
-    "        plt.plot(print_keys, np.array(mdlpre)*np.array(marpre)/(np.array(mdrpre)*np.array(malpre)),'-r', label='pre exercise')\n",
+    "        plt.xticks(keysm, print_keys)\n",
+    "        plt.plot(keysm, np.array(mdlpost)*np.array(marpost)/(np.array(mdrpost)*np.array(malpost)),'-b', label='post exercise')\n",
+    "        plt.plot(keysm, np.array(mdlpre)*np.array(marpre)/(np.array(mdrpre)*np.array(malpre)),'-r', label='pre exercise')\n",
     "        plt.legend(loc='upper right')\n",
+    "        plt.title('Delta/Alpha Ratio')\n",
+    "        plt.ylabel('Delta/Alpha ratio Left vs Right')\n",
+    "        plt.xlabel('Day')\n",
     "        plt.savefig(controller.filepath+'/qeeg/Delta%Alpha_'+activity+'_left%right_post%pre.png')\n",
     "        plt.close()\n",
     "        \n",
@@ -824,45 +855,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{1: '/home/apk/patient_id6/id6Day1-20190503T170539Z-001', 2: '/home/apk/patient_id6/id6Day2-20190503T211715Z-001', 90: '/home/apk/patient_id6/id6Day90-20190503T213214Z-001', 30: '/home/apk/patient_id6/id6Day30-20190503T212316Z-001', 7: '/home/apk/patient_id6/id6Day7-20190503T212715Z-001'}\n",
-      "{1: '/home/apk/patient_id6/id6Day1-20190503T170539Z-001', 2: '/home/apk/patient_id6/id6Day2-20190503T211715Z-001', 90: '/home/apk/patient_id6/id6Day90-20190503T213214Z-001', 30: '/home/apk/patient_id6/id6Day30-20190503T212316Z-001', 7: '/home/apk/patient_id6/id6Day7-20190503T212715Z-001'}\n",
       "{1: 'N.A.', 2: 'N.A.', 90: 'N.A.', 30: 'N.A.', 7: 'N.A.'}\n",
-      "{1: 'N.A.', 2: 'N.A.', 90: 'N.A.', 30: 'N.A.', 7: '/home/apk/patient_id6/id6Day7-20190503T212715Z-001'}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exception in Tkinter callback\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/apk/anaconda2/lib/python2.7/lib-tk/Tkinter.py\", line 1541, in __call__\n",
-      "    return self.func(*args)\n",
-      "  File \"<ipython-input-44-46a9937f9bc5>\", line 608, in <lambda>\n",
-      "    command=lambda: self.show_graph(controller, activity, 'DAY_7'))\n",
-      "  File \"<ipython-input-44-46a9937f9bc5>\", line 637, in show_graph\n",
-      "    img= Image.open(controller.filepath+'/qeeg/bsi_DAY_7'+activity+'_.png')\n",
-      "  File \"/home/apk/anaconda2/lib/python2.7/site-packages/PIL/Image.py\", line 2548, in open\n",
-      "    fp = builtins.open(filename, \"rb\")\n",
-      "IOError: [Errno 2] No such file or directory: '/home/apk/patient_id6/id6Day7-20190503T212715Z-001/qeeg/bsi_DAY_7a_.png'\n",
-      "Exception in Tkinter callback\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/apk/anaconda2/lib/python2.7/lib-tk/Tkinter.py\", line 1541, in __call__\n",
-      "    return self.func(*args)\n",
-      "  File \"<ipython-input-44-46a9937f9bc5>\", line 611, in <lambda>\n",
-      "    command=lambda: self.show_graph(controller, activity, 'DAY_30'))\n",
-      "  File \"<ipython-input-44-46a9937f9bc5>\", line 639, in show_graph\n",
-      "    img= Image.open(controller.filepath+'/qeeg/bsi_DAY_30'+activity+'_.png')\n",
-      "  File \"/home/apk/anaconda2/lib/python2.7/site-packages/PIL/Image.py\", line 2548, in open\n",
-      "    fp = builtins.open(filename, \"rb\")\n",
-      "IOError: [Errno 2] No such file or directory: '/home/apk/patient_id6/id6Day7-20190503T212715Z-001/qeeg/bsi_DAY_30a_.png'\n"
+      "{1: u'D:/Imprint-CMCL-Data/sanjana/patient_id_6\\\\Patient_id_06_Day1_06.10.2018\\\\', 2: u'D:/Imprint-CMCL-Data/sanjana/patient_id_6\\\\Patient_id_06_Day2_08.10.2018\\\\', 90: u'D:/Imprint-CMCL-Data/sanjana/patient_id_6\\\\Patient_id_06_Day90_04.01.2019\\\\', 30: u'D:/Imprint-CMCL-Data/sanjana/patient_id_6\\\\Patient_id_06_Day30_05.11.2018\\\\', 7: u'D:/Imprint-CMCL-Data/sanjana/patient_id_6\\\\Patient_id_06_Day7_24.10.2018\\\\'}\n"
      ]
     }
    ],
@@ -948,7 +949,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "version": "2.7.16"
   }
  },
  "nbformat": 4,
